# my_rpg

./: CMakeLists.txt  Makefile  README.md  my_rpg
include/: linkedlists.h  menu.h  my.h  rpg.h
lib/my/: Makefile  check_flags.c  init_fptr.c  my.h  my_atoi.c  my_binary.c  my_capitalize_hexa.c  my_getnbr.c  my_hexa.c  my_isneg.c  my_isnum.c  my_itoa.c  my_octal.c  my_printf.c  my_put_nbr.c  my_put_octal.c  my_put_pointer_address.c  my_put_unsigned_nbr.c  my_putchar.c  my_putstr.c  my_remove_char_in_str.c  my_revstr.c  my_show_word_array.c  my_sort_int_array.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_str_to_word_array.c  my_str_to_word_array_delim.c  my_strcapitalize.c  my_strcat.c  my_strcmp.c  my_strcpy.c  my_strdup.c  my_strlen.c  my_strlowcase.c  my_strncat.c  my_strncmp.c  (+3 more)
ressources/particles/: attack.xcf
src/: create_background.c  create_object.c  destroyer.c  game.c  hitbox.c  init_game.c  init_items.c  init_mobs_map.c  main.c
src/audio/: init_audio.c
src/camera/: chunk_move_down.c  chunk_move_left.c  chunk_move_right.c  chunk_move_up.c  chunk_tools.c
src/character/: animate_character.c  detection_moves.c  display_character.c  init_character.c  move_character.c  move_input.c
src/display/: display_gameloop.c
src/fight/: attack.c  fight.c  init_fight.c  progress_bar.c
src/hud/: display_hud.c
src/hud/gameover/: display_gameover.c  gameover_click.c
src/hud/pause/: display_pause.c  init_pause.c  menu_pause_click.c
src/inventory/: display_inventory.c  init_inventory.c  inventory.c  utils_inventory.c
src/items/: anim_items.c  dropped_items.c  get_items.c
src/linkedlists/: create_rm_free_elems.c  list_tools.c  swap_sort.c
src/mainmenu/: anim_btns.c  anim_btns_gameover.c  anim_btns_pause.c  btn_tools.c  initmenu.c  menu_click.c  menuloop.c
src/mobs/: animate_bat.c  animate_rat.c  bat.c  rat.c
src/npc/: display_npc_dialog.c  event_listener.c  init_alt_dialog.c  init_dialog.c  init_npc.c  init_npcs.c  npc_interaction.c
src/particles/: particles.c
src/quests/: display_quests.c  init_quests.c
src/scenes/: scene_manager.c  scenes.c
src/scenes/events/: gameloop_events.c  home_events.c
src/utils/: center_obj.c  drawer.c  end_game.c  music.c  my_itoa.c  shape.c  sprite.c  text.c
src/xp/: manage_xp.c
