cmake_minimum_required(VERSION 3.16)
project(MUL_my_rpg_2019 C)

set(CMAKE_C_STANDARD 11)

include_directories(include)
include_directories(lib/my)

add_executable(MUL_my_rpg_2019
        include/linkedlists.h
        include/menu.h
        include/my.h
        include/rpg.h
        lib/my/check_flags.c
        lib/my/init_fptr.c
        lib/my/my.h
        lib/my/my_atoi.c
        lib/my/my_binary.c
        lib/my/my_capitalize_hexa.c
        lib/my/my_getnbr.c
        lib/my/my_hexa.c
        lib/my/my_isneg.c
        lib/my/my_isnum.c
        lib/my/my_itoa.c
        lib/my/my_octal.c
        lib/my/my_printf.c
        lib/my/my_put_nbr.c
        lib/my/my_put_octal.c
        lib/my/my_put_pointer_address.c
        lib/my/my_put_unsigned_nbr.c
        lib/my/my_putchar.c
        lib/my/my_putstr.c
        lib/my/my_remove_char_in_str.c
        lib/my/my_revstr.c
        lib/my/my_show_word_array.c
        lib/my/my_sort_int_array.c
        lib/my/my_str_isalpha.c
        lib/my/my_str_islower.c
        lib/my/my_str_isnum.c
        lib/my/my_str_isprintable.c
        lib/my/my_str_isupper.c
        lib/my/my_str_to_word_array.c
        lib/my/my_str_to_word_array_delim.c
        lib/my/my_strcapitalize.c
        lib/my/my_strcat.c
        lib/my/my_strcmp.c
        lib/my/my_strcpy.c
        lib/my/my_strdup.c
        lib/my/my_strlen.c
        lib/my/my_strlowcase.c
        lib/my/my_strncat.c
        lib/my/my_strncmp.c
        lib/my/my_strncpy.c
        lib/my/my_strupcase.c
        lib/my/my_swap.c
        src/audio/init_audio.c
        src/camera/chunk_move_down.c
        src/camera/chunk_move_left.c
        src/camera/chunk_move_right.c
        src/camera/chunk_move_up.c
        src/camera/chunk_tools.c
        src/character/animate_character.c
        src/character/detection_moves.c
        src/character/display_character.c
        src/character/init_character.c
        src/character/move_character.c
        src/character/move_input.c
        src/display/display_gameloop.c
        src/fight/fight.c
        src/fight/init_fight.c
        src/fight/progress_bar.c
        src/hud/gameover/display_gameover.c
        src/hud/gameover/gameover_click.c
        src/hud/pause/display_pause.c
        src/hud/pause/init_pause.c
        src/hud/pause/menu_pause_click.c
        src/hud/display_hud.c
        src/inventory/display_inventory.c
        src/inventory/init_inventory.c
        src/inventory/inventory.c
        src/inventory/utils_inventory.c
        src/items/anim_items.c
        src/items/dropped_items.c
        src/items/get_items.c
        src/linkedlists/create_rm_free_elems.c
        src/linkedlists/list_tools.c
        src/linkedlists/swap_sort.c
        src/mainmenu/anim_btns.c
        src/mainmenu/anim_btns_gameover.c
        src/mainmenu/anim_btns_pause.c
        src/mainmenu/btn_tools.c
        src/mainmenu/initmenu.c
        src/mainmenu/menu_click.c
        src/mainmenu/menuloop.c
        src/mobs/animate_bat.c
        src/mobs/animate_rat.c
        src/mobs/bat.c
        src/mobs/rat.c
        src/npc/display_npc_dialog.c
        src/npc/event_listener.c
        src/npc/init_alt_dialog.c
        src/npc/init_dialog.c
        src/npc/init_npc.c
        src/npc/init_npcs.c
        src/npc/npc_interaction.c
        src/particles/particles.c
        src/quests/display_quests.c
        src/quests/init_quests.c
        src/scenes/events/gameloop_events.c
        src/scenes/events/home_events.c
        src/scenes/scene_manager.c
        src/scenes/scenes.c
        src/utils/center_obj.c
        src/utils/drawer.c
        src/utils/music.c
        src/utils/my_itoa.c
        src/utils/shape.c
        src/utils/sprite.c
        src/utils/text.c
        src/xp/manage_xp.c
        src/create_background.c
        src/create_object.c
        src/destroyer.c
        src/game.c
        src/hitbox.c
        src/init_game.c
        src/init_items.c
        src/main.c src/fight/attack.c src/utils/end_game.c)
